Fix dotnet branding, add button for jumping to first active comment

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -505,21 +505,6 @@ code {
     white-space: nowrap;
 }
 
-.btn-group {
-    .btn.active {
-        border-radius: .25rem !important;
-    }
-
-    .btn:not(.active) {
-        transform: scaleY(0.9);
-    }
-
-    .btn:hover {
-        border-radius: .25rem !important;
-        transform: scaleY(1);
-    }
-}
-
 .btn-primary {
     background-color: var(--link-color);
 }
